# game_xvi_sc

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
doc/: blocks.drawio
main/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  graphics_synthesizer.cpp  graphics_synthesizer.hpp  main.cpp  ram4k.cpp  ram4k.hpp  system_top.cpp  system_top.hpp
src/graphics_synthesizer/: background_layer.cpp  background_layer.hpp  color_palette.cpp  color_palette.hpp  color_value.cpp  color_value.hpp  command_port_decoder.cpp  command_port_decoder.hpp  tile_palette.cpp  tile_palette.hpp
src/include/ultra16/: system_top.hpp
test/: CMakeLists.txt  ram4k.test.cpp
